--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,394 @@
-.App {
+body {
+  background-color: #1a1f31;
+}
+
+#movieResults-nav {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 20px 10vw;
+  width: 100%;
+  height: 100px;
+  background: #11131f;
+}
+
+#movieResults-nav #search-bar-section {
+  position: relative;
+  float: right;
+  z-index: 10;
+}
+
+#movieResults-nav #search-bar {
+  height: 40px;
+  width: 500px;
+  border-radius: 5px;
+  color: #fff;
+  border: 0;
+  padding: 0 20px;
+  margin: 10px 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background: rgba(255, 255, 255, 0.1);
+}
+
+#movieResults-nav #search-bar-results {
+  -webkit-animation: 0.2s movieItem-display forwards;
+          animation: 0.2s movieItem-display forwards;
+  position: absolute;
+  -webkit-box-shadow: 0px 0px 28px 0px rgba(0, 0, 0, 0.55);
+  box-shadow: 0px 0px 28px 0px rgba(0, 0, 0, 0.55);
+  top: 55px;
+  width: 500px;
+  background: #1a1f31;
+  color: #fff;
+  border-radius: 5px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+}
+
+#movieResults-nav #search-bar-results dl {
+  padding: 0;
+}
+
+#movieResults-nav #search-bar-results dl dt {
+  padding: 10px;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: bold;
+  background: rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+#movieResults-nav #search-bar-results dl dd {
+  padding: 10px;
+  font-size: 14px;
+  margin: 0;
+  cursor: pointer;
+}
+
+#movieResults-nav #search-bar-results dl dd:hover {
+  background: rgba(0, 0, 0, 0.1);
+}
+
+#movieResults-nav #logo {
+  float: left;
+  height: 60px;
+}
+
+#movieResults-sort {
+  background: rgba(0, 0, 0, 0.151);
+  width: 100%;
+  height: 80px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 20px 10vw;
+}
+
+#movieResults-sort .comboSelector {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  position: relative;
+  cursor: pointer;
+  width: 200px;
+  float: right;
+  height: 40px;
+  line-height: 40px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0 20px;
+  color: #fff;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 5px;
+}
+
+#movieResults-sort .comboSelector .comboSelector-menu {
+  cursor: pointer;
+  position: absolute;
+  border-radius: 5px;
+  top: 45px;
+  left: 0;
+  width: 200px;
+  background: #11131f;
+  margin: 0;
+  padding: 10px 0;
+  z-index: 10;
+  -webkit-animation: movieItem-display 0.2s forwards;
+          animation: movieItem-display 0.2s forwards;
+}
+
+#movieResults-sort .comboSelector .comboSelector-menu .comboSelector-menu-item {
+  margin: 0;
+  padding: 0 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+#movieResults-sort .comboSelector .comboSelector-menu .comboSelector-menu-item:hover {
+  background: rgba(0, 0, 0, 0.4);
+}
+
+@media screen and (min-width: 2000px) {
+  .movieResults {
+    width: 80%;
+    padding: 50px 10%;
+    text-align: center;
+    display: -ms-inline-grid;
+    display: inline-grid;
+    -ms-grid-columns: auto auto auto auto auto auto;
+        grid-template-columns: auto auto auto auto auto auto;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    grid-gap: 15px;
+  }
+}
+
+@media screen and (max-width: 2000px) {
+  .movieResults {
+    width: 80%;
+    padding: 50px 10%;
+    text-align: center;
+    display: -ms-inline-grid;
+    display: inline-grid;
+    -ms-grid-columns: auto auto auto auto auto;
+        grid-template-columns: auto auto auto auto auto;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    grid-gap: 15px;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .movieResults {
+    width: 80%;
+    padding: 50px 10%;
+    text-align: center;
+    display: -ms-inline-grid;
+    display: inline-grid;
+    -ms-grid-columns: auto auto auto auto;
+        grid-template-columns: auto auto auto auto;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    grid-gap: 15px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .movieResults {
+    width: 80%;
+    padding: 50px 10%;
+    text-align: center;
+    display: -ms-inline-grid;
+    display: inline-grid;
+    -ms-grid-columns: auto auto auto;
+        grid-template-columns: auto auto auto;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    grid-gap: 15px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .movieResults {
+    width: calc(100% - 40px);
+    padding: 50px 20px;
+    text-align: center;
+    display: -ms-inline-grid;
+    display: inline-grid;
+    -ms-grid-columns: auto auto;
+        grid-template-columns: auto auto;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    grid-gap: 15px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .movieResults {
+    width: calc(100% - 40px);
+    padding: 50px 20px;
+    text-align: center;
+    display: -ms-inline-grid;
+    display: inline-grid;
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    grid-gap: 15px;
+  }
+}
+
+.movieItem {
+  color: #fff;
+  position: relative;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  width: auto;
+  margin: 0;
   text-align: center;
+  -webkit-animation: movieItem-display 1s forwards;
+          animation: movieItem-display 1s forwards;
 }
 
-.App-logo {
-  height: 40vmin;
+.movieItem:nth-child(1) {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.movieItem:nth-child(2) {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
 }
 
-.App-link {
-  color: #09d3ac;
+.movieItem:nth-child(3) {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
 }
+
+.movieItem:nth-child(4) {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
+}
+
+.movieItem:nth-child(5) {
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+
+.movieItem:nth-child(6) {
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s;
+}
+
+.movieItem:nth-child(7) {
+  -webkit-animation-delay: 0.7s;
+          animation-delay: 0.7s;
+}
+
+.movieItem:nth-child(8) {
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
+}
+
+.movieItem:nth-child(9) {
+  -webkit-animation-delay: 0.9s;
+          animation-delay: 0.9s;
+}
+
+.movieItem:nth-child(10) {
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.movieItem:nth-child(11) {
+  -webkit-animation-delay: 1.1s;
+          animation-delay: 1.1s;
+}
+
+.movieItem:nth-child(12) {
+  -webkit-animation-delay: 1.2s;
+          animation-delay: 1.2s;
+}
+
+.movieItem:nth-child(13) {
+  -webkit-animation-delay: 1.3s;
+          animation-delay: 1.3s;
+}
+
+.movieItem:nth-child(14) {
+  -webkit-animation-delay: 1.4s;
+          animation-delay: 1.4s;
+}
+
+.movieItem:nth-child(15) {
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+}
+
+.movieItem:nth-child(16) {
+  -webkit-animation-delay: 1.6s;
+          animation-delay: 1.6s;
+}
+
+.movieItem:nth-child(17) {
+  -webkit-animation-delay: 1.7s;
+          animation-delay: 1.7s;
+}
+
+.movieItem:nth-child(18) {
+  -webkit-animation-delay: 1.8s;
+          animation-delay: 1.8s;
+}
+
+.movieItem:nth-child(19) {
+  -webkit-animation-delay: 1.9s;
+          animation-delay: 1.9s;
+}
+
+.movieItem:nth-child(20) {
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+}
+
+@-webkit-keyframes movieItem-display {
+  from {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes movieItem-display {
+  from {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+.movieDescription h3 {
+  color: #0051ff;
+}
+
+.movieDescription p {
+  font-size: 14px;
+}
+
+.movieItem .movieDescription {
+  display: none;
+}
+
+.moviePoster {
+  background: rgba(0, 0, 0, 0.2);
+  background-image: url(./missing.svg);
+  background-size: 25%;
+  background-position: center;
+  background-repeat: no-repeat;
+  text-indent: -10000px;
+  width: 100%;
+  height: 100%;
+}
+
+.movieItem:hover .movieDescription {
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #01050e;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 15px;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+/*# sourceMappingURL=App.css.map */
