--- a/src/App.css
+++ b/src/App.css
@@ -332,6 +332,906 @@ body {
           animation-delay: 2s;
 }
 
+.movieItem:nth-child(21) {
+  -webkit-animation-delay: 2.1s;
+          animation-delay: 2.1s;
+}
+
+.movieItem:nth-child(22) {
+  -webkit-animation-delay: 2.2s;
+          animation-delay: 2.2s;
+}
+
+.movieItem:nth-child(23) {
+  -webkit-animation-delay: 2.3s;
+          animation-delay: 2.3s;
+}
+
+.movieItem:nth-child(24) {
+  -webkit-animation-delay: 2.4s;
+          animation-delay: 2.4s;
+}
+
+.movieItem:nth-child(25) {
+  -webkit-animation-delay: 2.5s;
+          animation-delay: 2.5s;
+}
+
+.movieItem:nth-child(26) {
+  -webkit-animation-delay: 2.6s;
+          animation-delay: 2.6s;
+}
+
+.movieItem:nth-child(27) {
+  -webkit-animation-delay: 2.7s;
+          animation-delay: 2.7s;
+}
+
+.movieItem:nth-child(28) {
+  -webkit-animation-delay: 2.8s;
+          animation-delay: 2.8s;
+}
+
+.movieItem:nth-child(29) {
+  -webkit-animation-delay: 2.9s;
+          animation-delay: 2.9s;
+}
+
+.movieItem:nth-child(30) {
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+}
+
+.movieItem:nth-child(31) {
+  -webkit-animation-delay: 3.1s;
+          animation-delay: 3.1s;
+}
+
+.movieItem:nth-child(32) {
+  -webkit-animation-delay: 3.2s;
+          animation-delay: 3.2s;
+}
+
+.movieItem:nth-child(33) {
+  -webkit-animation-delay: 3.3s;
+          animation-delay: 3.3s;
+}
+
+.movieItem:nth-child(34) {
+  -webkit-animation-delay: 3.4s;
+          animation-delay: 3.4s;
+}
+
+.movieItem:nth-child(35) {
+  -webkit-animation-delay: 3.5s;
+          animation-delay: 3.5s;
+}
+
+.movieItem:nth-child(36) {
+  -webkit-animation-delay: 3.6s;
+          animation-delay: 3.6s;
+}
+
+.movieItem:nth-child(37) {
+  -webkit-animation-delay: 3.7s;
+          animation-delay: 3.7s;
+}
+
+.movieItem:nth-child(38) {
+  -webkit-animation-delay: 3.8s;
+          animation-delay: 3.8s;
+}
+
+.movieItem:nth-child(39) {
+  -webkit-animation-delay: 3.9s;
+          animation-delay: 3.9s;
+}
+
+.movieItem:nth-child(40) {
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
+}
+
+.movieItem:nth-child(41) {
+  -webkit-animation-delay: 4.1s;
+          animation-delay: 4.1s;
+}
+
+.movieItem:nth-child(42) {
+  -webkit-animation-delay: 4.2s;
+          animation-delay: 4.2s;
+}
+
+.movieItem:nth-child(43) {
+  -webkit-animation-delay: 4.3s;
+          animation-delay: 4.3s;
+}
+
+.movieItem:nth-child(44) {
+  -webkit-animation-delay: 4.4s;
+          animation-delay: 4.4s;
+}
+
+.movieItem:nth-child(45) {
+  -webkit-animation-delay: 4.5s;
+          animation-delay: 4.5s;
+}
+
+.movieItem:nth-child(46) {
+  -webkit-animation-delay: 4.6s;
+          animation-delay: 4.6s;
+}
+
+.movieItem:nth-child(47) {
+  -webkit-animation-delay: 4.7s;
+          animation-delay: 4.7s;
+}
+
+.movieItem:nth-child(48) {
+  -webkit-animation-delay: 4.8s;
+          animation-delay: 4.8s;
+}
+
+.movieItem:nth-child(49) {
+  -webkit-animation-delay: 4.9s;
+          animation-delay: 4.9s;
+}
+
+.movieItem:nth-child(50) {
+  -webkit-animation-delay: 5s;
+          animation-delay: 5s;
+}
+
+.movieItem:nth-child(51) {
+  -webkit-animation-delay: 5.1s;
+          animation-delay: 5.1s;
+}
+
+.movieItem:nth-child(52) {
+  -webkit-animation-delay: 5.2s;
+          animation-delay: 5.2s;
+}
+
+.movieItem:nth-child(53) {
+  -webkit-animation-delay: 5.3s;
+          animation-delay: 5.3s;
+}
+
+.movieItem:nth-child(54) {
+  -webkit-animation-delay: 5.4s;
+          animation-delay: 5.4s;
+}
+
+.movieItem:nth-child(55) {
+  -webkit-animation-delay: 5.5s;
+          animation-delay: 5.5s;
+}
+
+.movieItem:nth-child(56) {
+  -webkit-animation-delay: 5.6s;
+          animation-delay: 5.6s;
+}
+
+.movieItem:nth-child(57) {
+  -webkit-animation-delay: 5.7s;
+          animation-delay: 5.7s;
+}
+
+.movieItem:nth-child(58) {
+  -webkit-animation-delay: 5.8s;
+          animation-delay: 5.8s;
+}
+
+.movieItem:nth-child(59) {
+  -webkit-animation-delay: 5.9s;
+          animation-delay: 5.9s;
+}
+
+.movieItem:nth-child(60) {
+  -webkit-animation-delay: 6s;
+          animation-delay: 6s;
+}
+
+.movieItem:nth-child(61) {
+  -webkit-animation-delay: 6.1s;
+          animation-delay: 6.1s;
+}
+
+.movieItem:nth-child(62) {
+  -webkit-animation-delay: 6.2s;
+          animation-delay: 6.2s;
+}
+
+.movieItem:nth-child(63) {
+  -webkit-animation-delay: 6.3s;
+          animation-delay: 6.3s;
+}
+
+.movieItem:nth-child(64) {
+  -webkit-animation-delay: 6.4s;
+          animation-delay: 6.4s;
+}
+
+.movieItem:nth-child(65) {
+  -webkit-animation-delay: 6.5s;
+          animation-delay: 6.5s;
+}
+
+.movieItem:nth-child(66) {
+  -webkit-animation-delay: 6.6s;
+          animation-delay: 6.6s;
+}
+
+.movieItem:nth-child(67) {
+  -webkit-animation-delay: 6.7s;
+          animation-delay: 6.7s;
+}
+
+.movieItem:nth-child(68) {
+  -webkit-animation-delay: 6.8s;
+          animation-delay: 6.8s;
+}
+
+.movieItem:nth-child(69) {
+  -webkit-animation-delay: 6.9s;
+          animation-delay: 6.9s;
+}
+
+.movieItem:nth-child(70) {
+  -webkit-animation-delay: 7s;
+          animation-delay: 7s;
+}
+
+.movieItem:nth-child(71) {
+  -webkit-animation-delay: 7.1s;
+          animation-delay: 7.1s;
+}
+
+.movieItem:nth-child(72) {
+  -webkit-animation-delay: 7.2s;
+          animation-delay: 7.2s;
+}
+
+.movieItem:nth-child(73) {
+  -webkit-animation-delay: 7.3s;
+          animation-delay: 7.3s;
+}
+
+.movieItem:nth-child(74) {
+  -webkit-animation-delay: 7.4s;
+          animation-delay: 7.4s;
+}
+
+.movieItem:nth-child(75) {
+  -webkit-animation-delay: 7.5s;
+          animation-delay: 7.5s;
+}
+
+.movieItem:nth-child(76) {
+  -webkit-animation-delay: 7.6s;
+          animation-delay: 7.6s;
+}
+
+.movieItem:nth-child(77) {
+  -webkit-animation-delay: 7.7s;
+          animation-delay: 7.7s;
+}
+
+.movieItem:nth-child(78) {
+  -webkit-animation-delay: 7.8s;
+          animation-delay: 7.8s;
+}
+
+.movieItem:nth-child(79) {
+  -webkit-animation-delay: 7.9s;
+          animation-delay: 7.9s;
+}
+
+.movieItem:nth-child(80) {
+  -webkit-animation-delay: 8s;
+          animation-delay: 8s;
+}
+
+.movieItem:nth-child(81) {
+  -webkit-animation-delay: 8.1s;
+          animation-delay: 8.1s;
+}
+
+.movieItem:nth-child(82) {
+  -webkit-animation-delay: 8.2s;
+          animation-delay: 8.2s;
+}
+
+.movieItem:nth-child(83) {
+  -webkit-animation-delay: 8.3s;
+          animation-delay: 8.3s;
+}
+
+.movieItem:nth-child(84) {
+  -webkit-animation-delay: 8.4s;
+          animation-delay: 8.4s;
+}
+
+.movieItem:nth-child(85) {
+  -webkit-animation-delay: 8.5s;
+          animation-delay: 8.5s;
+}
+
+.movieItem:nth-child(86) {
+  -webkit-animation-delay: 8.6s;
+          animation-delay: 8.6s;
+}
+
+.movieItem:nth-child(87) {
+  -webkit-animation-delay: 8.7s;
+          animation-delay: 8.7s;
+}
+
+.movieItem:nth-child(88) {
+  -webkit-animation-delay: 8.8s;
+          animation-delay: 8.8s;
+}
+
+.movieItem:nth-child(89) {
+  -webkit-animation-delay: 8.9s;
+          animation-delay: 8.9s;
+}
+
+.movieItem:nth-child(90) {
+  -webkit-animation-delay: 9s;
+          animation-delay: 9s;
+}
+
+.movieItem:nth-child(91) {
+  -webkit-animation-delay: 9.1s;
+          animation-delay: 9.1s;
+}
+
+.movieItem:nth-child(92) {
+  -webkit-animation-delay: 9.2s;
+          animation-delay: 9.2s;
+}
+
+.movieItem:nth-child(93) {
+  -webkit-animation-delay: 9.3s;
+          animation-delay: 9.3s;
+}
+
+.movieItem:nth-child(94) {
+  -webkit-animation-delay: 9.4s;
+          animation-delay: 9.4s;
+}
+
+.movieItem:nth-child(95) {
+  -webkit-animation-delay: 9.5s;
+          animation-delay: 9.5s;
+}
+
+.movieItem:nth-child(96) {
+  -webkit-animation-delay: 9.6s;
+          animation-delay: 9.6s;
+}
+
+.movieItem:nth-child(97) {
+  -webkit-animation-delay: 9.7s;
+          animation-delay: 9.7s;
+}
+
+.movieItem:nth-child(98) {
+  -webkit-animation-delay: 9.8s;
+          animation-delay: 9.8s;
+}
+
+.movieItem:nth-child(99) {
+  -webkit-animation-delay: 9.9s;
+          animation-delay: 9.9s;
+}
+
+.movieItem:nth-child(100) {
+  -webkit-animation-delay: 10s;
+          animation-delay: 10s;
+}
+
+.movieItem:nth-child(101) {
+  -webkit-animation-delay: 10.1s;
+          animation-delay: 10.1s;
+}
+
+.movieItem:nth-child(102) {
+  -webkit-animation-delay: 10.2s;
+          animation-delay: 10.2s;
+}
+
+.movieItem:nth-child(103) {
+  -webkit-animation-delay: 10.3s;
+          animation-delay: 10.3s;
+}
+
+.movieItem:nth-child(104) {
+  -webkit-animation-delay: 10.4s;
+          animation-delay: 10.4s;
+}
+
+.movieItem:nth-child(105) {
+  -webkit-animation-delay: 10.5s;
+          animation-delay: 10.5s;
+}
+
+.movieItem:nth-child(106) {
+  -webkit-animation-delay: 10.6s;
+          animation-delay: 10.6s;
+}
+
+.movieItem:nth-child(107) {
+  -webkit-animation-delay: 10.7s;
+          animation-delay: 10.7s;
+}
+
+.movieItem:nth-child(108) {
+  -webkit-animation-delay: 10.8s;
+          animation-delay: 10.8s;
+}
+
+.movieItem:nth-child(109) {
+  -webkit-animation-delay: 10.9s;
+          animation-delay: 10.9s;
+}
+
+.movieItem:nth-child(110) {
+  -webkit-animation-delay: 11s;
+          animation-delay: 11s;
+}
+
+.movieItem:nth-child(111) {
+  -webkit-animation-delay: 11.1s;
+          animation-delay: 11.1s;
+}
+
+.movieItem:nth-child(112) {
+  -webkit-animation-delay: 11.2s;
+          animation-delay: 11.2s;
+}
+
+.movieItem:nth-child(113) {
+  -webkit-animation-delay: 11.3s;
+          animation-delay: 11.3s;
+}
+
+.movieItem:nth-child(114) {
+  -webkit-animation-delay: 11.4s;
+          animation-delay: 11.4s;
+}
+
+.movieItem:nth-child(115) {
+  -webkit-animation-delay: 11.5s;
+          animation-delay: 11.5s;
+}
+
+.movieItem:nth-child(116) {
+  -webkit-animation-delay: 11.6s;
+          animation-delay: 11.6s;
+}
+
+.movieItem:nth-child(117) {
+  -webkit-animation-delay: 11.7s;
+          animation-delay: 11.7s;
+}
+
+.movieItem:nth-child(118) {
+  -webkit-animation-delay: 11.8s;
+          animation-delay: 11.8s;
+}
+
+.movieItem:nth-child(119) {
+  -webkit-animation-delay: 11.9s;
+          animation-delay: 11.9s;
+}
+
+.movieItem:nth-child(120) {
+  -webkit-animation-delay: 12s;
+          animation-delay: 12s;
+}
+
+.movieItem:nth-child(121) {
+  -webkit-animation-delay: 12.1s;
+          animation-delay: 12.1s;
+}
+
+.movieItem:nth-child(122) {
+  -webkit-animation-delay: 12.2s;
+          animation-delay: 12.2s;
+}
+
+.movieItem:nth-child(123) {
+  -webkit-animation-delay: 12.3s;
+          animation-delay: 12.3s;
+}
+
+.movieItem:nth-child(124) {
+  -webkit-animation-delay: 12.4s;
+          animation-delay: 12.4s;
+}
+
+.movieItem:nth-child(125) {
+  -webkit-animation-delay: 12.5s;
+          animation-delay: 12.5s;
+}
+
+.movieItem:nth-child(126) {
+  -webkit-animation-delay: 12.6s;
+          animation-delay: 12.6s;
+}
+
+.movieItem:nth-child(127) {
+  -webkit-animation-delay: 12.7s;
+          animation-delay: 12.7s;
+}
+
+.movieItem:nth-child(128) {
+  -webkit-animation-delay: 12.8s;
+          animation-delay: 12.8s;
+}
+
+.movieItem:nth-child(129) {
+  -webkit-animation-delay: 12.9s;
+          animation-delay: 12.9s;
+}
+
+.movieItem:nth-child(130) {
+  -webkit-animation-delay: 13s;
+          animation-delay: 13s;
+}
+
+.movieItem:nth-child(131) {
+  -webkit-animation-delay: 13.1s;
+          animation-delay: 13.1s;
+}
+
+.movieItem:nth-child(132) {
+  -webkit-animation-delay: 13.2s;
+          animation-delay: 13.2s;
+}
+
+.movieItem:nth-child(133) {
+  -webkit-animation-delay: 13.3s;
+          animation-delay: 13.3s;
+}
+
+.movieItem:nth-child(134) {
+  -webkit-animation-delay: 13.4s;
+          animation-delay: 13.4s;
+}
+
+.movieItem:nth-child(135) {
+  -webkit-animation-delay: 13.5s;
+          animation-delay: 13.5s;
+}
+
+.movieItem:nth-child(136) {
+  -webkit-animation-delay: 13.6s;
+          animation-delay: 13.6s;
+}
+
+.movieItem:nth-child(137) {
+  -webkit-animation-delay: 13.7s;
+          animation-delay: 13.7s;
+}
+
+.movieItem:nth-child(138) {
+  -webkit-animation-delay: 13.8s;
+          animation-delay: 13.8s;
+}
+
+.movieItem:nth-child(139) {
+  -webkit-animation-delay: 13.9s;
+          animation-delay: 13.9s;
+}
+
+.movieItem:nth-child(140) {
+  -webkit-animation-delay: 14s;
+          animation-delay: 14s;
+}
+
+.movieItem:nth-child(141) {
+  -webkit-animation-delay: 14.1s;
+          animation-delay: 14.1s;
+}
+
+.movieItem:nth-child(142) {
+  -webkit-animation-delay: 14.2s;
+          animation-delay: 14.2s;
+}
+
+.movieItem:nth-child(143) {
+  -webkit-animation-delay: 14.3s;
+          animation-delay: 14.3s;
+}
+
+.movieItem:nth-child(144) {
+  -webkit-animation-delay: 14.4s;
+          animation-delay: 14.4s;
+}
+
+.movieItem:nth-child(145) {
+  -webkit-animation-delay: 14.5s;
+          animation-delay: 14.5s;
+}
+
+.movieItem:nth-child(146) {
+  -webkit-animation-delay: 14.6s;
+          animation-delay: 14.6s;
+}
+
+.movieItem:nth-child(147) {
+  -webkit-animation-delay: 14.7s;
+          animation-delay: 14.7s;
+}
+
+.movieItem:nth-child(148) {
+  -webkit-animation-delay: 14.8s;
+          animation-delay: 14.8s;
+}
+
+.movieItem:nth-child(149) {
+  -webkit-animation-delay: 14.9s;
+          animation-delay: 14.9s;
+}
+
+.movieItem:nth-child(150) {
+  -webkit-animation-delay: 15s;
+          animation-delay: 15s;
+}
+
+.movieItem:nth-child(151) {
+  -webkit-animation-delay: 15.1s;
+          animation-delay: 15.1s;
+}
+
+.movieItem:nth-child(152) {
+  -webkit-animation-delay: 15.2s;
+          animation-delay: 15.2s;
+}
+
+.movieItem:nth-child(153) {
+  -webkit-animation-delay: 15.3s;
+          animation-delay: 15.3s;
+}
+
+.movieItem:nth-child(154) {
+  -webkit-animation-delay: 15.4s;
+          animation-delay: 15.4s;
+}
+
+.movieItem:nth-child(155) {
+  -webkit-animation-delay: 15.5s;
+          animation-delay: 15.5s;
+}
+
+.movieItem:nth-child(156) {
+  -webkit-animation-delay: 15.6s;
+          animation-delay: 15.6s;
+}
+
+.movieItem:nth-child(157) {
+  -webkit-animation-delay: 15.7s;
+          animation-delay: 15.7s;
+}
+
+.movieItem:nth-child(158) {
+  -webkit-animation-delay: 15.8s;
+          animation-delay: 15.8s;
+}
+
+.movieItem:nth-child(159) {
+  -webkit-animation-delay: 15.9s;
+          animation-delay: 15.9s;
+}
+
+.movieItem:nth-child(160) {
+  -webkit-animation-delay: 16s;
+          animation-delay: 16s;
+}
+
+.movieItem:nth-child(161) {
+  -webkit-animation-delay: 16.1s;
+          animation-delay: 16.1s;
+}
+
+.movieItem:nth-child(162) {
+  -webkit-animation-delay: 16.2s;
+          animation-delay: 16.2s;
+}
+
+.movieItem:nth-child(163) {
+  -webkit-animation-delay: 16.3s;
+          animation-delay: 16.3s;
+}
+
+.movieItem:nth-child(164) {
+  -webkit-animation-delay: 16.4s;
+          animation-delay: 16.4s;
+}
+
+.movieItem:nth-child(165) {
+  -webkit-animation-delay: 16.5s;
+          animation-delay: 16.5s;
+}
+
+.movieItem:nth-child(166) {
+  -webkit-animation-delay: 16.6s;
+          animation-delay: 16.6s;
+}
+
+.movieItem:nth-child(167) {
+  -webkit-animation-delay: 16.7s;
+          animation-delay: 16.7s;
+}
+
+.movieItem:nth-child(168) {
+  -webkit-animation-delay: 16.8s;
+          animation-delay: 16.8s;
+}
+
+.movieItem:nth-child(169) {
+  -webkit-animation-delay: 16.9s;
+          animation-delay: 16.9s;
+}
+
+.movieItem:nth-child(170) {
+  -webkit-animation-delay: 17s;
+          animation-delay: 17s;
+}
+
+.movieItem:nth-child(171) {
+  -webkit-animation-delay: 17.1s;
+          animation-delay: 17.1s;
+}
+
+.movieItem:nth-child(172) {
+  -webkit-animation-delay: 17.2s;
+          animation-delay: 17.2s;
+}
+
+.movieItem:nth-child(173) {
+  -webkit-animation-delay: 17.3s;
+          animation-delay: 17.3s;
+}
+
+.movieItem:nth-child(174) {
+  -webkit-animation-delay: 17.4s;
+          animation-delay: 17.4s;
+}
+
+.movieItem:nth-child(175) {
+  -webkit-animation-delay: 17.5s;
+          animation-delay: 17.5s;
+}
+
+.movieItem:nth-child(176) {
+  -webkit-animation-delay: 17.6s;
+          animation-delay: 17.6s;
+}
+
+.movieItem:nth-child(177) {
+  -webkit-animation-delay: 17.7s;
+          animation-delay: 17.7s;
+}
+
+.movieItem:nth-child(178) {
+  -webkit-animation-delay: 17.8s;
+          animation-delay: 17.8s;
+}
+
+.movieItem:nth-child(179) {
+  -webkit-animation-delay: 17.9s;
+          animation-delay: 17.9s;
+}
+
+.movieItem:nth-child(180) {
+  -webkit-animation-delay: 18s;
+          animation-delay: 18s;
+}
+
+.movieItem:nth-child(181) {
+  -webkit-animation-delay: 18.1s;
+          animation-delay: 18.1s;
+}
+
+.movieItem:nth-child(182) {
+  -webkit-animation-delay: 18.2s;
+          animation-delay: 18.2s;
+}
+
+.movieItem:nth-child(183) {
+  -webkit-animation-delay: 18.3s;
+          animation-delay: 18.3s;
+}
+
+.movieItem:nth-child(184) {
+  -webkit-animation-delay: 18.4s;
+          animation-delay: 18.4s;
+}
+
+.movieItem:nth-child(185) {
+  -webkit-animation-delay: 18.5s;
+          animation-delay: 18.5s;
+}
+
+.movieItem:nth-child(186) {
+  -webkit-animation-delay: 18.6s;
+          animation-delay: 18.6s;
+}
+
+.movieItem:nth-child(187) {
+  -webkit-animation-delay: 18.7s;
+          animation-delay: 18.7s;
+}
+
+.movieItem:nth-child(188) {
+  -webkit-animation-delay: 18.8s;
+          animation-delay: 18.8s;
+}
+
+.movieItem:nth-child(189) {
+  -webkit-animation-delay: 18.9s;
+          animation-delay: 18.9s;
+}
+
+.movieItem:nth-child(190) {
+  -webkit-animation-delay: 19s;
+          animation-delay: 19s;
+}
+
+.movieItem:nth-child(191) {
+  -webkit-animation-delay: 19.1s;
+          animation-delay: 19.1s;
+}
+
+.movieItem:nth-child(192) {
+  -webkit-animation-delay: 19.2s;
+          animation-delay: 19.2s;
+}
+
+.movieItem:nth-child(193) {
+  -webkit-animation-delay: 19.3s;
+          animation-delay: 19.3s;
+}
+
+.movieItem:nth-child(194) {
+  -webkit-animation-delay: 19.4s;
+          animation-delay: 19.4s;
+}
+
+.movieItem:nth-child(195) {
+  -webkit-animation-delay: 19.5s;
+          animation-delay: 19.5s;
+}
+
+.movieItem:nth-child(196) {
+  -webkit-animation-delay: 19.6s;
+          animation-delay: 19.6s;
+}
+
+.movieItem:nth-child(197) {
+  -webkit-animation-delay: 19.7s;
+          animation-delay: 19.7s;
+}
+
+.movieItem:nth-child(198) {
+  -webkit-animation-delay: 19.8s;
+          animation-delay: 19.8s;
+}
+
+.movieItem:nth-child(199) {
+  -webkit-animation-delay: 19.9s;
+          animation-delay: 19.9s;
+}
+
+.movieItem:nth-child(200) {
+  -webkit-animation-delay: 20s;
+          animation-delay: 20s;
+}
+
 @-webkit-keyframes movieItem-display {
   from {
     -webkit-transform: scale(0);
